[gd_scene load_steps=8 format=3 uid="uid://dlrldmrsh4f4m"]

[ext_resource type="Script" path="res://Escenas/Niveles/nivel_2.gd" id="1_5gu8i"]
[ext_resource type="PackedScene" uid="uid://6tsdj31d52xt" path="res://Escenas/carteles/victoria.tscn" id="2_qxt0n"]
[ext_resource type="PackedScene" uid="uid://b3f5uesdnb1oh" path="res://Escenas/Burbuja/burbuja.tscn" id="2_yvis4"]
[ext_resource type="PackedScene" uid="uid://2ds52qtg13pp" path="res://Escenas/carteles/derota.tscn" id="3_36ul2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdfrp"]
size = Vector2(70, 1368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ln41w"]
size = Vector2(64, 1267)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8j6d"]
size = Vector2(1415, 53.5)

[node name="nivel_2" type="Node2D"]
script = ExtResource("1_5gu8i")

[node name="tiempoSpawn" type="Timer" parent="."]

[node name="instanObj" type="Node2D" parent="."]
position = Vector2(73, -84)

[node name="Der" type="Marker2D" parent="instanObj"]
position = Vector2(1100, 0)

[node name="Izq" type="Marker2D" parent="instanObj"]

[node name="bordes" type="Node2D" parent="."]

[node name="der" type="StaticBody2D" parent="bordes"]
position = Vector2(1156, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/der"]
position = Vector2(160, 86)
shape = SubResource("RectangleShape2D_jdfrp")

[node name="izq" type="StaticBody2D" parent="bordes"]
position = Vector2(-43, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/izq"]
position = Vector2(16, 145.5)
shape = SubResource("RectangleShape2D_ln41w")

[node name="abajo" type="StaticBody2D" parent="bordes"]
position = Vector2(-43, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordes/abajo"]
position = Vector2(708, 740)
shape = SubResource("RectangleShape2D_h8j6d")

[node name="viento" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="detenerViento" type="Timer" parent="."]

[node name="temporizador" type="Timer" parent="."]

[node name="Burbuja" parent="." instance=ExtResource("2_yvis4")]
position = Vector2(783, 333)

[node name="textTiempo" type="Label" parent="."]
offset_left = 568.0
offset_top = 30.0
offset_right = 725.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 0.937255)
theme_override_font_sizes/font_size = 23
text = "tiempo"

[node name="victoria" parent="." instance=ExtResource("2_qxt0n")]

[node name="derota" parent="." instance=ExtResource("3_36ul2")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(641, 598)

[connection signal="timeout" from="tiempoSpawn" to="." method="_on_tiempo_spawn_timeout"]
[connection signal="timeout" from="viento" to="." method="_on_viento_timeout"]
[connection signal="timeout" from="detenerViento" to="." method="_on_detener_viento_timeout"]
[connection signal="timeout" from="temporizador" to="." method="_on_temporizador_timeout"]
